--- a/app/src/main/res/menu/allowances.xml
+++ b/app/src/main/res/menu/allowances.xml
@@ -2,8 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.thebangias.familybudgetclient.activities.AllowancesActivity">
-    <item android:id="@+id/action_example" android:title="@string/action_addNew"
-        app:showAsAction="withText|ifRoom" />
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/menu_refresh" android:icon="@drawable/ic_menu_refresh"
+        app:showAsAction="ifRoom" android:title="Refresh" />
+    <!-- <item android:id="@+id/action_settings" android:title="@string/action_settings"
+        android:orderInCategory="100" app:showAsAction="never" /> -->
 </menu>
