--- a/app/src/main/res/values/strings_activity_allowances.xml
+++ b/app/src/main/res/values/strings_activity_allowances.xml
@@ -4,10 +4,14 @@
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
     <string name="action_settings">Settings</string>
-    <string name="action_addNew">+</string>
+    <string name="action_refresh">Refresh</string>
 
     <string name="sc_header_name_collapsed_icon">+</string>
     <string name="sc_header_name_expanded_icon">-</string>
     <string name="sc_header_name">Category</string>
-    <string name="sc_header_amount">Amount</string>
+    <string name="sc_header_reconciledamount">Amount</string>
+    <string name="sc_header_pendingamount">Pending</string>
+
+    <string name="refresh_alert_dialog">An error occurred while attempting to refresh allowances. Error Details: </string>
+    <string name="refresh_alert_title">Refresh Error</string>
 </resources>
